--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excursion</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./resources/css/styles.css" />
+  </head>
+  <body>
+    <div class="center">
+      <h1 class="heading">Discover hidden places in the world around you</h1>
+      <a href="#">Download Excursion (Coming Soon)</a>
+      <video autoplay loop>
+        <source src="./resources/media/excursion.mp4" type="video/mp4"> 
+        Your browser does not support the video tag.
+      </video>
+      <h1 class="heading2">Your personal travel guide</h1>
+      <p class="subheading">
+        Excursion remembers places you like, and recommends new points of
+        interest around you.
+      </p>
+      <div class="campimg">
+        <img
+          src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg"
+          alt="camp imgage"
+        />
+      </div>
+      <br />
+      <div class="phoneimg">
+        <img
+          src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png"
+          alt="mobile phone image"
+        />
+      </div>
+      <h1 class="heading3">Coming Soon for iPhone and Android</h1>
+      <a href="#">Download Excursion (Coming soon!)</a>
+      <p class="footer">&copy; Excursion</p>
+    </div>
+  </body>
 </html>
